[package]
name = "nscldaq_ringmaster"
version = "0.2.1"
edition = "2018"
#authors = "Ron Fox"
license = "GPL-3.0"
description = "RUST replacement for NSCLDAQ RingMaster - only requires ring2stdout"
homepage = "http://docs.frib.ms.edu/daq"
repository = "https://github.com/FRIBDAQ/rust-ringmaster.git"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nscldaq_ringbuffer = "0.6.0"
simple-logging = "2.0.2"
log = "0.4"
whoami="1.2.1"
portman_client="0.1.0"
clap = "=2.27.1"
sysinfo = "=0.13.4"
